# axk-theme

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
axk_theme/: hooks.py  license.txt  modules.txt
axk_theme/fixtures/: dashboard_chart.json  number_card.json  website_theme.json  workspace.json
axk_theme/public/css/: axk_brand.css  axk_desk.css  axk_login.css  axk_pages.css
axk_theme/public/js/: axk_theme.js
axk_theme/www/: contact.html  contact.py  login.html  privacy.html  terms.html  verify.html  verify.py
reference/: WORKSPACE-ANATOMY.md  WORKSPACE-PATTERNS.md
reference/workspaces/buyer_marketplace/: buyer_marketplace.json
reference/workspaces/commodity_trade/: commodity_trade.json
reference/workspaces/compliance_&_verification/: compliance_&_verification.json
reference/workspaces/content_&_knowledge/: content_&_knowledge.json
reference/workspaces/cooperative_manager/: cooperative_manager.json
reference/workspaces/corridor_authority/: corridor_authority.json
reference/workspaces/exporter_portal/: exporter_portal.json
reference/workspaces/farmer_dashboard/: farmer_dashboard.json
reference/workspaces/finance_&_credit/: finance_&_credit.json
reference/workspaces/finance_intelligence/: finance_intelligence.json
reference/workspaces/inspections/: inspections.json
reference/workspaces/inspector_dashboard/: inspector_dashboard.json
reference/workspaces/insurance/: insurance.json
reference/workspaces/logistics_marketplace/: logistics_marketplace.json
reference/workspaces/my_farms/: my_farms.json
(+9 files in other folders)
