[project]
name = "axk_theme"
authors = [{ name = "Afrikabal", email = "team@afrikabal.org" }]
description = "AXK Network brand styling and public page templates — portable Frappe theme app."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "axk_theme"
